--- a/lib/babyshower_web/components/layouts/app.html.heex
+++ b/lib/babyshower_web/components/layouts/app.html.heex
@@ -103,7 +103,11 @@
             </svg>
             <div class="flex flex-col">
                 <p class="text-2xl"> <%= @event_info.venue_title %> </p>
-                <p class="text-[#3babd7]/80 underline text-base"> <%= "#{@event_info.location}, #{@event_info.city} #{@event_info.state}, #{@event_info.zip}" %> </p>
+                <a class=""
+                  href="https://maps.apple.com/place?q=Luxe%20Event%20Venue&ll=35.3380678%2C-80.7388351&auid=14071248966051689003&lsp=9902&address=10213%20John%20Adams%20Rd%2C%20Charlotte%2C%20NC%20%2028262%2C%20United%20States">
+                  <p class="text-[#3babd7]/80 underline text-base"> <%= "#{@event_info.location}, #{@event_info.city} #{@event_info.state}, #{@event_info.zip}" %> </p>
+                </a>
+
           </div>
           </div>
             <div class="cartoon-detail2 flex gap-2">
